--- a/vignettes/semlbci.Rmd
+++ b/vignettes/semlbci.Rmd
@@ -3,10 +3,9 @@ title: "Quick Start"
 author: "Shu Fai Cheung"
 date: "`r Sys.Date()`"
 output:
-  rmarkdown::html_vignette:
-    toc: true
+  rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Quick Start}
+  %\VignetteIndexEntry{quick_start}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
