--- a/vignettes/semlbci.Rmd
+++ b/vignettes/semlbci.Rmd
@@ -23,11 +23,11 @@ library(semlbci)
 
 # Introduction
 
-This package includes functions for finding the likelihood based confidence intervals (LBCIs) of parameters in the output of a structural equation modeling (SEM) function. Currently, it supports the output from `lavaan::lavaan()`.
+This package includes functions for finding the likelihood based confidence intervals (LBCIs) of parameters in the output of a structural equation modeling (SEM) function. Currently, it supports the output from `lavaan::lavaan()` and its wrappers, such as `lavaan::sem()` and `lavaan::cfa()`.
 
 # Fit a model to a dataset
 
-The package has a dataset, `simple_med`, with three variables, `x`, `m`, and `y`. Let us fit a simple mediation model to this datast.
+The package has a dataset, `simple_med`, with three variables, `x`, `m`, and `y`. Let us fit a simple mediation model to this dataset.
 
 ```{r}
 data(simple_med)
@@ -45,8 +45,6 @@ ab := a * b
 fit <- sem(mod, simple_med, fixed.x = FALSE)
 ```
 
-If we want to find the LBCIs for standardized solution, we usually should also treat the exogenous variables as random variables such that the sampling error in estimating their variances and covariances will be taken into account.
-
 To illustrate how to find the LBCIs for user-defined parameters, we labelled the `m ~ x` path by `a`, the `y ~ m` path by `b`, and defined the indirect effect, `ab`, by `a * b`.
 
 This is the summary:
@@ -55,7 +53,7 @@ This is the summary:
 summary(fit, standardized = TRUE)
 ```
 
-# Exmaples
+# Examples
 
 The main function to find the LBCIs for free parameters is `semlbci()`. This should be the only function used by normal users. We will first illustrate its usage by some examples, and then present other technical details in the following section.
 
@@ -69,13 +67,13 @@ out <- semlbci(sem_out = fit,
                         "m ~ x"))
 ```
 
-The output is the parameter table of the fitted `lavaan` object, with two columns added, `lbci_lb` and `lbci_ub`, the likelihood-based lower bounds and upper bounds, respectively. The column of point estimates in the fit object is positioned between these two columns of bounds. Diagnostic information will also be appended to the output (described in details below).
+The output is the parameter table of the fitted `lavaan` object, with two columns added, `lbci_lb` and `lbci_ub`, the likelihood-based lower bounds and upper bounds, respectively.
 
 ```{r}
 out
 ```
 
-In this example, the point estimate of the unstandardized coefficient from `x` to `m` is `r out[out$id == 1, "est"]`, and the LBCI is `r out[out$id == 1, "lbci_lb"]` to `r out[out$id == 1, "lbci_ub"]`.
+In this example, the point estimate of the unstandardized coefficient from `x` to `m` is `r formatC(out[out$id == 1, "est"], 3, format = "f")`, and the LBCI is `r formatC(out[out$id == 1, "lbci_lb"], 3, format = "f")` to `r formatC(out[out$id == 1, "lbci_ub"], 3, format = "f")`.
 
 ## Find the LBCI for a user-defined parameter
 
@@ -84,10 +82,12 @@ To find the LBCI for a user-defined parameter, use `label :=`, where `label` is 
 ```{r}
 out <- semlbci(sem_out = fit,
                pars = c("ab := "))
-out
+print(out, annotation = FALSE)
 ```
 
-In this example, the point estimate of the indirect effect is `r out[out$lhs == "ab", "est"]`, and the LBCI is `r out[out$lhs == "ab", "lbci_lb"]` to `r out[out$lhs == "ab", "lbci_ub"]`.
+In this example, the point estimate of the indirect effect is `r formatC(out[out$lhs == "ab", "est"], 3, format = "f")`, and the LBCI is `r formatC(out[out$lhs == "ab", "lbci_lb"], 3, format = "f")` to `r formatC(out[out$lhs == "ab", "lbci_ub"], 3, format = "f")`.
+
+(Note: In some examples, we added `annotation = FALSE` to suppress the annotation to the printout.)
 
 ## Find the LBCI for the parameters in the standardized metric
 
@@ -98,7 +98,7 @@ out <- semlbci(sem_out = fit,
                pars = c("y ~ m",
                         "m ~ x"),
                standardized = TRUE)
-out
+print(out, annotation = FALSE)
 ```
 
 The LBCIs for standardized user-defined parameters can be requested similarly.
@@ -107,32 +107,19 @@ The LBCIs for standardized user-defined parameters can be requested similarly.
 out <- semlbci(sem_out = fit,
                pars = c("ab :="),
                standardized = TRUE)
-out
-```
-
-Note that it can be very slow when finding the LBCIs for standardized solution. In the above example, the time used to find the lower bound of the standardized indirect effect is `r out[out$op == ":=", "time_lb"]` second(s), and that for the upper bound is `r out[out$op == ":=", "time_ub"]` second(s). This is because several parameters are involved even for the standardized indirect effect with one mediator (six parameters: the variances of `x`, the error variances of `m` and `y`, the three unstandardized path coefficients `m ~ x`, `y ~ m`, and `y ~ x`).
-
-## Specify the coverage probability of the LBCI
-
-This can be done by setting `ciperc`. The default is .95.
-
-```{r}
-out <- semlbci(sem_out = fit,
-               pars = c("y ~ m",
-                        "m ~ x"),
-               ciperc = .99)
-out
+print(out, annotation = FALSE)
 ```
 
 # Basic arguments in `semlbci()`
 
 ## `sem_out` and `pars`: The fit object and the parameters
 
-The only required argument for `semlbci()` is `sem_out`, the fit object from `lavaan::lavaan()` or its variants (e.g., `lavann::cfa()` and `lavaan::sem()`). By default, `semlbci()` will find the LBCIs for all free parameters and user-defined parameters, which can take a long time for a model with many parameters. Moreover, LBCI is usually used when Wald-type confidence interval may not be suitable, such as an indirect effect or a parameter in the standardized solution. These parameters may have sampling distributions that are asymmetric or otherwise substantially nonnormal due to bounded parameter spaces or other reasons.
+The only required argument for `semlbci()` is `sem_out`, the fit object from `lavaan::lavaan()` or its wrappers (e.g., `lavann::cfa()` and `lavaan::sem()`). By default, `semlbci()` will find the LBCIs for all free parameters (except for variances and error variances) and user-defined parameters, which can take a long time for a model with many parameters. Moreover, LBCI is usually used when Wald-type confidence interval may not be suitable, such as an indirect effect or a parameter in the standardized solution. These parameters may have sampling distributions that are asymmetric or otherwise substantially nonnormal due to bounded parameter spaces or other reasons.
 
-Therefore, it is recommended to use `semlbci()` only for selected parameters. The argument `pars` should be a list of strings which specifies the parameters for which LBCIs will be formed (detailed below).
+Therefore, it is recommended to call `semlbci()` without specifying any parameters. If the time to run is long, then call `semlbci()`
+only for selected parameters. The argument `pars` should be a model syntax or a vector of strings which specifies the parameters for which LBCIs will be formed (detailed below).
 
-If time is not a concern, for example, when users want to explore the LBCIs for all free and user-defined parameters in a final model, then `pars` can be omitted to reques the LBCIs for all free and user-defined parameters (if any) in a model.
+If time is not a concern, for example, when users want to explore the LBCIs for all free and user-defined parameters in a final model, then `pars` can be omitted to request the LBCIs for all free parameters (except for variances and covariances) and user-defined parameters (if any) in a model.
 
 ## `ciperc`: The level of confidence
 
@@ -140,43 +127,91 @@ By default, the 95% LBCIs for the unstandardized solution will be formed. To cha
 
 ## `standardized`: Whether standardized solution is used
 
-By default, the LBCIs for the unstandardized solution will be formed. If the LBCIs for the standardized solution are desired, set `standardized = TRUE`. Note that it is much slower to find the LBCIs for the standardized solution than for the unstandardized solution.
+By default, the LBCIs for the unstandardized solution will be formed. If the LBCIs for the standardized solution are desired, set `standardized = TRUE`. Note that for some models it can be much slower to find the LBCIs for the standardized solution than for the unstandardized solution.
 
-## `method`: Method to be used for computing the LBCIs
+## `parallel` and `ncpus`
 
-The method used to search a bound. Currently only support `"wn"` (the method proposed by Wu & Neale, 2012).
+The search for the bounds needs to be done separately for each bound and this can take a long time for a model with many parameters and/or with equality constraints. Therefore, parallel processing should always be enabled by setting `parallel` to `TRUE` and `ncpus` to a number smaller than the number of available cores. For example, without parallel processing, the following search took about 28 seconds on Intel i7-8700:
+
+```{r eval = FALSE}
+data(HolzingerSwineford1939)
+mod_test <-
+'
+visual  =~ x1 + x2 + x3
+textual =~ x4 + x5 + x6
+speed   =~ x7 + x8 + x9
+'
+fit_cfa <- cfa(model = mod_test, data = HolzingerSwineford1939)
+semlbci(fit_cfa)
+```
+
+With parallel processing enabled and using 6 cores, it took about 20 seconds.
+
+```{r eval = FALSE}
+semlbci(fit_cfa, parallel = TRUE, ncpus = 6)
+```
+
+The speed difference can be much greater for a model with many parameters and some equality constraints.
+
+Enabling parallel processing also has the added benefit of showing the progress in real time.
 
 ## Other arguments
 
-For detailed documentation of other argumetns, please refer to its help page, as well as the help page for `ci_bound_wn_i()` and `ci_i_one()`, the functions called by `semlbci()`.
+For detailed documentation of other arguments, please refer to the help page of `semlbci()`. Advanced users who want to tweak the optimization options can check the help pages of `ci_bound_wn_i()` and `ci_i_one()`,
 
-# Diagnostic information
+# Additional Features
 
-Columns with diagnostic information will always be appended to the output of `semlbci()`. This feature cannot be turned off because we believe it is important to check the diagnostic information to see if there are any anomalies in the search. Unlike Wald-type CIs, LBCIs are searched by optimization rather than by closed-form equations. It is possible that the bounds are difficult to find for some situations.
+## Multiple-group Models
 
-## `status_lb` and `status_ub`
+`semlbci()` supports multiple-group models. For example, this is a two-group confirmatory factor analysis model with equality constraints:
 
-These two columns store the status codes in searching for the lower bound and the upper bound, respectively. If the status code is equal to zero, then the optimization should be fine. Any value other than zero indicates one or more issues in the optimization. Users are recommended to examine other columns, such as `post_check_lb` and `post_check_ub`. Detailed information on the search can be requested by setting `verbose = TRUE`. Additional diagnostic information can then be retrieved by inspecting the attributes `lb_diag` or `ub_diag` (e.g., `attr(out, "lb_diag")` in the example above) for the probable reason of the non-zero status code.
+```{r}
+data(HolzingerSwineford1939)
+mod_cfa <-
+'
+visual  =~ x1 + v(lambda2, lambda2)*x2 + v(lambda3, lambda3)*x3
+textual =~ x4 + v(lambda5, lambda5)*x5 + v(lambda6, lambda6)*x6
+speed   =~ x7 + v(lambda8, lambda8)*x8 + v(lambda9, lambda9)*x9
+'
+fit_cfa <- cfa(model = mod_cfa, data = HolzingerSwineford1939,
+           group = "school")
+```
 
-## `ci_org_lb` and `ci_org_ub`
+The factor correlations between group are not constrained to be equal.
 
-The confidence intervals computed by `lavaan`. These are the same confidence intervals returned by `lavaan::ParameterEstimates()` or `lavaan::StandardizedSolution()` for the fit object specified in `sem_out`. These intervals are included in the output for comparison.
+```{r}
+parameterEstimates(fit_cfa)[c(22, 23, 58, 59), ]
+```
 
-## `ratio_lb` and `ratio_ub`
+This is the LBCI for covariance between visual ability and textual ability:
 
-The ratio of the distance from a LBCI bound to the point estimates to that from the corresponding `lavaan` confidence bound to the same point estimates, sign ignored. This ratio is not expected to be zero. However, if the ratio is too large or too small, users should decide whether it is usual based on the nature of the parameters. The optional argument `ci_limit_ratio_tol` in `semlbci()` (documented in `ci_bound_wn_i()`) sets the threshold for alerting the users. If the ratio is larger than this threshold (defualt 1.5), the status code will be set to a non-zero value.
+```{r}
+fcov <- semlbci(fit_cfa, pars = c("visual ~~ textual"))
+print(fcov, annotation = FALSE)
+```
 
-## `post_check_lb` and `post_check_ub`
+This is the LBCI for correlation between visual ability and textual ability:
 
-These two columns indicate whether the solution at the boundary found passes the check conducted by `lavaan::lavInspect()` with argument set to `post.check`. If `FALSE` for a bound, the bound should not be trusted.
+```{r}
+fcor <- semlbci(fit_cfa, pars = c("visual ~~ textual"))
+print(fcor, annotation = FALSE)
+```
 
-## `time_lb` and `time_ub`
+## Robust LBCI
 
-The time, in second, used to search for each bound. It can serve as an estimate for rerunning the search. It also reflects how difficult it is to find the solution for a bound.
+`semlbci()` also supports the robust LBCI proposed by Falk (2018). To form robust LBCI, the model must be fitted with robust test statistics requested (e.g., `estimator = "MLR"`). To request robust LBCIs, add `robust = "satorra.2000"` when calling `semlbci()`.
 
-## `method`
+We use the simple mediation model as an example:
 
-The method used to search a bound. Currently only support `"wn"` (the method proposed by Wu & Neale, 2012).
+```{r}
+fit_robust <- sem(mod, simple_med, fixed.x = FALSE, estimator = "MLR")
+fit_lbci_ab_robust <- semlbci(fit_robust, pars = "ab := ", robust = "satorra.2000")
+print(fit_lbci_ab_robust, annotation = FALSE)
+```
+
+## Latent level parameters
+
+`semlbci()` support forming the LBCIs for most free parameters. Not illustrated above but LBCIs can be formed for path coefficients between latent variables and also user-defined parameters based on latent-level parameters, such as an indirect effect from one latent variable to another.
 
 # Limitations
 
@@ -184,19 +219,20 @@ The following is a summary of the limitations of `semlbci()`. Please refer to `c
 
 ## Estimators
 
-The function `semlbci()` currently supports `lavaan::lavaan()` results estimated by maximum likelihood (`ML`), full information maximum likelihood for missing data (`fiml`), generalized least squares (`GLS`), and weighted least squares (a.k.a. asymptotically distribution free) (`WLS`).
+The function `semlbci()` currently supports `lavaan::lavaan()` results estimated by maximum likelihood (`ML`), full information maximum likelihood for missing data (`fiml`), generalized least squares (`GLS`), weighted least squares (a.k.a. asymptotically distribution free) (`WLS`), and their robust variants (e.g., `MLM`).
 
 ## Models
 
-Officially, this package currently supports single group models with continuous variables. It *may* work for multiple group models but it has not been tested for these models.
+This package currently supports single and multiple group models with continuous variables. It *may* work for a model with ordered variables but this is not officially tested.
 
 ## Methods
 
-The current and preferred method is the one proposed by Wu and Neale (2012). The current implementation in `semlbci()` does not check whether a parameter is near its boundary. The more advanced methods by Pritikin, Rappaport, and Neale (2017) will be considered in future development. The method by Neale and Miller (1997, `"nm"` `semlbci()`) was also attempted but only tested in a few simple scenarios.
+The current and preferred method is the one proposed by Wu and Neale (2012). The current implementation in `semlbci()` does not check whether a parameter is near its boundary. The more advanced methods by Pritikin, Rappaport, and Neale (2017) will be considered in future development.
 
 # References
 
-Neale, M. C., & Miller, M. B. (1997). The use of likelihood-based confidence intervals in genetic models. *Behavior Genetics, 27*(2), 113–120.
+Falk, C. F. (2018). Are robust standard errors the best approach for interval estimation with nonnormal data in structural equation
+modeling? *Structural Equation Modeling: A Multidisciplinary Journal, 25*(2), 244-266. https://doi.org/10.1080/10705511.2017.1367254
 
 Pek, J., & Wu, H. (2015). Profile likelihood-based confidence intervals and regions for structural equation models. *Psychometrika, 80*(4), 1123–1145. https://doi.org/10.1007/s11336-015-9461-1
 
